--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,89 +9,105 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test8"
         android:text="@string/button1"
+        android:onClick="B1Listener"
         app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
         app:layout_constraintTop_toTopOf="@id/nav_host_fragment" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test5"
         android:text="@string/button2"
+        android:onClick="B2Listener"
         app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
         app:layout_constraintTop_toTopOf="@+id/nav_host_fragment" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test5"
         android:text="@string/button3"
+        android:onClick="B3Listener"
         app:layout_constraintStart_toStartOf="@id/nav_host_fragment"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test3"
         android:text="@string/button4"
+        android:onClick="B4Listener"
         app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test4"
         android:text="@string/button5"
+        android:onClick="B5Listener"
         app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
         app:layout_constraintTop_toBottomOf="@id/button3" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test5"
         android:text="@string/button6"
+        android:onClick="B6Listener"
         app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
         app:layout_constraintTop_toBottomOf="@id/button4" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test6"
         android:text="@string/button7"
+        android:onClick="B7Listener"
         app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
         app:layout_constraintTop_toBottomOf="@id/button5" />
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="165dp"
-        android:layout_height="120dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/test8"
         android:text="@string/button8"
+        android:onClick="B8Listener"
         app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
