Completed submenus, created the splash screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="test9">#eae7e8</color>
     <color name="test10">#444040</color>
 
+    <color name="black">#000000</color>
+
 </resources>
