--- a/app/src/main/res/layout/activity_v_f.xml
+++ b/app/src/main/res/layout/activity_v_f.xml
@@ -19,7 +19,7 @@
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
         android:padding="20dip"
-        android:text="@string/VPMenu0"
+        android:text="@string/VFMenu0"
         android:onClick="VF0Listener"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/VFMenu1"
@@ -38,7 +38,7 @@
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
         android:padding="20dip"
-        android:text="@string/VPMenu1"
+        android:text="@string/VFMenu1"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/VFMenu2"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,7 +58,7 @@
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
         android:padding="20dip"
-        android:text="@string/VPMenu2"
+        android:text="@string/VFMenu2"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/VFMenu3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
         android:padding="20dip"
-        android:text="@string/VPMenu3"
+        android:text="@string/VFMenu3"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
