--- a/app/src/main/res/layout/activity_v_f_0.xml
+++ b/app/src/main/res/layout/activity_v_f_0.xml
@@ -1,22 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/VF0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:hint="@string/VF1"
-        android:textColor="#070707"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/VFMenu01"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/down_arrow"
+            android:drawableRight="@drawable/down_arrow"
+            android:gravity="start|center_vertical"
+            android:onClick="VF0Listener"
+            android:padding="20dip"
+            android:text="@string/VFMenu01"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VF0" />
+
+        <Button
+            android:id="@+id/VFMenu02"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/down_arrow"
+            android:drawableRight="@drawable/down_arrow"
+            android:gravity="start|center_vertical"
+            android:onClick="VF0Listener"
+            android:padding="20dip"
+            android:text="@string/VFMenu02"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VF01" />
+
+        <Button
+            android:id="@+id/VFMenu03"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/down_arrow"
+            android:drawableRight="@drawable/down_arrow"
+            android:gravity="start|center_vertical"
+            android:onClick="VF0Listener"
+            android:padding="20dip"
+            android:text="@string/VFMenu03"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VF02" />
+
+        <Button
+            android:id="@+id/VFMenu04"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/down_arrow"
+            android:drawableRight="@drawable/down_arrow"
+            android:gravity="start|center_vertical"
+            android:onClick="VF0Listener"
+            android:padding="20dip"
+            android:text="@string/VFMenu04"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VF03" />
+
+        <Button
+            android:id="@+id/VFMenu05"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/down_arrow"
+            android:drawableRight="@drawable/down_arrow"
+            android:gravity="start|center_vertical"
+            android:onClick="VF0Listener"
+            android:padding="20dip"
+            android:text="@string/VFMenu05"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VF04" />
+
+        <Button
+            android:id="@+id/VFMenu06"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/down_arrow"
+            android:drawableRight="@drawable/down_arrow"
+            android:gravity="start|center_vertical"
+            android:onClick="VF0Listener"
+            android:padding="20dip"
+            android:text="@string/VFMenu06"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VF05" />
+
+        <TextView
+            android:id="@+id/VF0"
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:hint="@string/VF0"
+            android:padding="20dip"
+            android:textColor="#ff000000"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/VF01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dip"
+            android:hint="@string/VF01"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu01" />
+
+        <TextView
+            android:id="@+id/VF02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dip"
+            android:hint="@string/VF02"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu02" />
+
+        <TextView
+            android:id="@+id/VF03"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu03" />
+
+        <TextView
+            android:id="@+id/VF04"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/VF04"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu04" />
+
+        <TextView
+            android:id="@+id/VF05"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu05" />
+
+        <TextView
+            android:id="@+id/VF06"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu06" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
