--- a/app/src/main/res/layout/activity_v_f_0.xml
+++ b/app/src/main/res/layout/activity_v_f_0.xml
@@ -154,6 +154,7 @@
             android:id="@+id/VF04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dip"
             android:hint="@string/VF04"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
