--- a/app/src/main/res/layout/activity_v_f_0.xml
+++ b/app/src/main/res/layout/activity_v_f_0.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <Button
@@ -66,7 +66,7 @@
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VF03T" />
+            app:layout_constraintTop_toBottomOf="@+id/VF03" />
 
         <Button
             android:id="@+id/VFMenu05"
@@ -98,125 +98,215 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/VF05" />
 
-        <TableLayout
-            android:id="@+id/VF03T"
+        <RelativeLayout
+            android:id="@+id/VF03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VF03">
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu03">
 
-            <TableRow
+            <TableLayout
+                android:id="@+id/VF03Table"
                 android:layout_width="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#000000">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/VF03Text">
 
-                <TextView
+                <TableRow
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:background="#FFFFFF"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:text="@string/VF03T11"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
                     android:layout_margin="1dp"
                     android:layout_weight="1"
-                    android:background="#FFFFFF"
-                    android:padding="5dp"
-                    android:text="@string/VF03T12" />
-            </TableRow>
+                    android:background="#000000">
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#000000">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:background="#FFFFFF"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="@string/VF03T11"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:background="#FFFFFF"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:text="@string/VF03T21"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:layout_weight="1"
+                        android:background="#FFFFFF"
+                        android:padding="5dp"
+                        android:text="@string/VF03T12" />
+                </TableRow>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:background="#FFFFFF"
-                    android:maxLines="100"
-                    android:padding="5dp"
-                    android:text="@string/VF03T22" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#000000">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:background="#FFFFFF"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:text="@string/VF03T31"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     android:layout_margin="1dp"
                     android:layout_weight="1"
-                    android:background="#FFFFFF"
-                    android:maxLines="100"
-                    android:padding="5dp"
-                    android:text="@string/VF03T32" />
-            </TableRow>
+                    android:background="#000000">
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#000000">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:background="#FFFFFF"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="@string/VF03T21"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:background="#FFFFFF"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:text="@string/VF03T41"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:layout_weight="1"
+                        android:background="#FFFFFF"
+                        android:maxLines="100"
+                        android:padding="5dp"
+                        android:text="@string/VF03T22" />
+                </TableRow>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     android:layout_margin="1dp"
                     android:layout_weight="1"
-                    android:background="#FFFFFF"
-                    android:maxLines="100"
-                    android:padding="5dp"
-                    android:text="@string/VF03T42" />
-            </TableRow>
+                    android:background="#000000">
 
-        </TableLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:background="#FFFFFF"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="@string/VF03T31"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:layout_weight="1"
+                        android:background="#FFFFFF"
+                        android:maxLines="100"
+                        android:padding="5dp"
+                        android:text="@string/VF03T32" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_margin="1dp"
+                    android:layout_weight="1"
+                    android:background="#000000">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:background="#FFFFFF"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="@string/VF03T41"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        android:layout_weight="1"
+                        android:background="#FFFFFF"
+                        android:maxLines="100"
+                        android:padding="5dp"
+                        android:text="@string/VF03T42" />
+                </TableRow>
+
+            </TableLayout>
+
+            <TextView
+                android:id="@+id/VF03Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/VF03"
+                android:padding="10dip" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/VF01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu01">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/VF01"
+                android:padding="10dip" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/VF02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu02">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/VF02"
+                android:padding="10dip"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/VF04"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu04">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/VF04"
+                android:padding="10dip"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/VF05"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu05">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/VF05"
+                android:padding="10dip" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/VF06"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VFMenu06">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/VF06"
+                android:padding="10dip" />
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/VF0"
@@ -234,66 +324,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/VF01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/VF01"
-            android:padding="10dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VFMenu01" />
-
-        <TextView
-            android:id="@+id/VF02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/VF02"
-            android:padding="10dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VFMenu02" />
-
-        <TextView
-            android:id="@+id/VF03"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/VF03"
-            android:padding="10dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VFMenu03" />
-
-        <TextView
-            android:id="@+id/VF04"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/VF04"
-            android:padding="10dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VFMenu04" />
-
-        <TextView
-            android:id="@+id/VF05"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/VF05"
-            android:padding="10dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VFMenu05" />
-
-        <TextView
-            android:id="@+id/VF06"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/VF06"
-            android:padding="10dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VFMenu06" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
